# arcana-os

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CNAME  cards.md  cli.md  getting-started.md  index.md  install.ps1  install.sh
docs/api/: agent.md  cards.md  evals.md  index.md  memory.md  models.md  observability.md  types.md
docs/stylesheets/: arcana.css
evals/: harness.py  types.py
evals/fixtures/: agent_configs.py  memory_states.py  prompts.py
evals/suites/: blending.py  decay.py  memory.py
examples/: multi_card_blend.py  research_agent.py
overrides/partials/: logo.html
tests/: test_eval_harness.py  test_memory_decay.py  test_memory_quality.py  test_memory_sqlite.py
