[project]
name = "arcana-os"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv.sources]
arcana-core = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

# Workspace-level dev tools — available when running from the repo root.
# Per-package test deps (pytest, pytest-asyncio, pytest-cov) live in each
# package's own pyproject.toml so they install correctly in isolation too.
[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "pre-commit>=4.6.0",
]

# Documentation site — `uv run --group docs mkdocs serve`
# mike (versioned docs) is intentionally omitted for now; add it here when
# released versions need to be served side by side.
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "pymdown-extensions>=10.0",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E — pycodestyle errors
# F — pyflakes
# I — isort
# UP — pyupgrade (modernise syntax)
# B — flake8-bugbear (common Python pitfalls)

[tool.ruff.lint.isort]
known-first-party = ["arcana", "arcana_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Pyright — strict type checking on arcana-core; examples and tests excluded
# ---------------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# Editable installs are registered via .pth files that some Pyright versions don't follow;
# listing them explicitly ensures IDE resolution matches `uv run pyright`.
extraPaths = [
    "packages/arcana-core",
    "packages/arcana-cli",
]
exclude = [
    "**/examples/**",
    "**/tests/**",
]
# Suppress missing-stubs warnings for third-party packages that don't ship them
reportMissingTypeStubs = false
